# haskell-course

./: .ghci  .hgignore  .hgtags  Course.cabal  Course.hs  README  replace  replace.bat
Answer/: Replace.hs
L02/: List.hs
L03/: Parser.hs
L04/: Fluffy.hs  Misty.hs
L05/: Testing.hs
L06/: JsonParser.hs  JsonValue.hs  MoreParser.hs
L07/: Anagrams.hs
L08/: FastAnagrams.hs  ParAnagrams.hs
L09/: BKTree.hs  EditDistance.hs  MetricSpace.hs
L10/: Compose.hs
TicTacToe/: .ghci  TicTacToe.cabal  build.sbt
TicTacToe/Data/: TicTacToe.hs
TicTacToe/Data/TicTacToe/: Board.hs  GameResult.hs  Interact.hs  Player.hs  Position.hs
TicTacToe/Test/Data/: TicTacToe.hs
TicTacToe/Test/Data/TicTacToe/: Board.hs  GameResult.hs  Player.hs  Position.hs
TicTacToe/etc/: TicTacToe  TicTacToe.scala
TicTacToe/haskell/: TicTacToe.cabal
TicTacToe/haskell/Data/TicTacToe/: Board.hs  Interact.hs
TicTacToe/haskell/Test/Data/TicTacToe/: Board.hs
TicTacToe/java/src/: Player.java  Position.java
TicTacToe/java/src/tictactoe/: Board.java  BoardLike.java  GameResult.java  Main.java  MoveResult.java  Player.java  Position.java
TicTacToe/ports/: TicTacToe.scala
TicTacToe/project/: build.properties
TicTacToe/scala/: TicTacToe.scala
TicTacToe/src/main/scala/: TicTacToe.scala
TicTacToe/src/test/scala/: TicTacToeTest.scala
bfpg-examples/: MaybeCake.hs  TextBasedRuler.hs
euler/: euler.hs  p12.hs  p13.hs  p14.hs  p15.hs  p16.hs  p17.hs  p18.hs  p19.hs  p20.hs  p21.hs  p22.hs  p67.hs  pascal.hs
pinball/: cache.py  pinball-small.txt  pinball.hs  pinball.py  pinball.txt  (+1 more)
(+7 files in other folders)
